<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/eight"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/menu_rotate" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_zoom"
            android:title="@string/menu_zoom" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_brightness"
            android:title="@string/menu_brightness" />
        <item
            android:id="@+id/four"
            android:icon="@drawable/ic_bnw"
            android:title="@string/menu_black_and_white" />
        <item
            android:id="@+id/five"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_negative" />
        <item
            android:id="@+id/six"
            android:icon="@drawable/rgb"
            android:title="@string/menu_color" />
        <item
            android:id="@+id/seven"
            android:icon="@drawable/ic_unsharp_mask"
            android:title="Unsharp Masking" />
        <item
            android:id="@+id/twelve"
            android:icon="@drawable/ic_blur"
            android:title="Blur" />
        <item
            android:id="@+id/nine"
            android:icon="?attr/actionModeShareDrawable"
            android:title="Spline Interpolation" />
        <item
            android:id="@+id/ten"
            android:icon="@android:drawable/ic_menu_view"
            android:title="Retouch" />
        <item
            android:id="@+id/eleven"
            android:icon="@drawable/ic_cube"
            android:title="3D Cube" />


    </group>
</menu>
